refactor:adding link contact

--- a/style.html
+++ b/style.html
@@ -18,6 +18,7 @@
                 <a href="#" >Skills</a>
                 <a href="#" >Education</a>
                 <a href="#" >Experience</a>
+                <a href="#" >Contact</a>
             </nav>
         </header>
         <section class="home">
