--- a/projet1/portfolio11.html
+++ b/projet1/portfolio11.html
@@ -46,7 +46,11 @@
                     I'm <span>Rajae<br>a</span> Web Developer
                 </h1>
                 <p class="description">
-                    I’m a passionate web developer who loves turning ideas into clean, functional, and visually appealing digital experiences. With a background in economics and a growing expertise in programming, I bring both creativity and analytical thinking to every project I work on. I’m constantly learning, building, and exploring new ways to create meaningful and user-friendly web solutions.
+                    I’m a passionate web developer who loves turning ideas into clean, functional, and visually
+                    appealing digital experiences. With a background in economics and a growing expertise in
+                    programming, I bring both creativity and analytical thinking to every project I work on. I’m
+                    constantly learning, building, and exploring new ways to create meaningful and user-friendly web
+                    solutions.
                 </p>
 
                 <div class="action_btns">
@@ -66,28 +70,24 @@
     <!-- parcours-->
     <div class="container1">
 
-    <div class="card">
-        <h2>2025-2026</h2>
-        <p>Licence professionnelle continue en développement informatique (en cours..)</p>
-        <p>Université Hassan 2 de Casablanca</p>
+        <div class="card">
+            <h2>2025-2026</h2>
+            <p>Licence professionnelle continue en développement informatique (en cours..)</p>
+            <p>Université Hassan 2 de Casablanca</p>
+        </div>
+
+        <div class="card">
+            <h3>2019-2023</h3>
+            <p>Licence universitaires en Economie </p>
+            <p>Faculté des Sciences juridiques, economiques et sociales Ain chok </p>
+        </div>
+
+        <div class="card">
+            <h4>2018-2019</h4>
+            <p>Baccalauréat Sciences la vie et la terre </p>
+            <p>Lycée qualifiant Abdlkhalek Torres </p>
+        </div>
     </div>
-
-    <div class="card">
-        <h3>2019-2023</h3>
-        <p>Licence universitaires en Economie </p>
-        <p>Faculté des Sciences juridiques, economiques et sociales Ain chok </p>
-    </div>
-
-    <div class="card">
-        <h4>2018-2019</h4>
-        <p>Baccalauréat Sciences la vie et la terre </p>
-        <p>Lycée qualifiant Abdlkhalek Torres </p>
-    </div>
-
-    
-
-</div>
-
 </body>
 
 </html>
